--- a/trunk/template/default/user/home.htm
+++ b/trunk/template/default/user/home.htm
@@ -96,9 +96,9 @@
                 <!--{/if}-->
               </div>
               <div class="list_fun clearfix">
-                <a href="###" data-iid='<!--{$article_list.id}-->' class="iCMS_good_btn" title="32个赞"><i class="icon-thumbs-up"></i> <span>(<!--{$article_list.good}-->)</span></a>
-                <a href="###" data-iid='<!--{$article_list.id}-->' class="iCMS_comment_btn" title="评论"><i class="icon-comment"></i> <span>(<!--{$article_list.comments}-->)</span></a>
-                <a href="###" data-iid='<!--{$article_list.id}-->' class="iCMS_favorite_btn" title="收藏"><i class="icon-heart"></i></a>
+                <a href="###" data-iid='<!--{$article_list.id}-->' data-do='good' class="iCMS_article_do" title="32个赞"><i class="icon-thumbs-up"></i> (<span><!--{$article_list.good}--></span>)</a>
+                <a href="###" data-iid='<!--{$article_list.id}-->' data-title='<!--{$article_list.title}-->' data-do='comment' class="iCMS_article_do" title="评论"><i class="icon-comment"></i> (<span><!--{$article_list.comments}--></span>)</a>
+                <a href="###" data-iid='<!--{$article_list.id}-->' data-do='favorite' class="iCMS_article_do" title="收藏"><i class="icon-heart"></i></a>
               </div>
             </li>
             <!--{/iCMS}-->
@@ -115,7 +115,7 @@
           <a href="<!--{iCMS:router url='/user/manage'}-->" class="btn"><i class="icon_setting"></i> <span>主页管理</span></a>
         </div>
         <!--{/if}-->
-        <div class="mod txtlist" id="user_category">
+        <div class="mod txtList" id="user_category">
           <div class="hd">
             <h3>分类<span>CATEGORY</span></h3>
             <!--{if $status.isme}-->
@@ -133,9 +133,9 @@
             <h3>粉丝<span>FANS</span></h3>
             <a href="<!--{iCMS:router url='/user/manage/follower'}-->" target="_blank" class="more">管理&gt;&gt;</a>
           </div>
-          <ul>
+          <ul class="avatarList">
             <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->"><!--{$user_follow.name}--></a></li>
+            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="iCMS_user_card avatar_30" data-uid="<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
             <!--{/iCMS}-->
           </ul>
         </div>
@@ -146,18 +146,20 @@
           </div>
           <ul>
             <!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->"><!--{$user_follow.name}--></a></li>
+            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="iCMS_user_card avatar_30" data-uid="<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
             <!--{/iCMS}-->
           </ul>
         </div>
         <div class="mod">
           <div class="hd">
             <h3>统计<span>STATISTICS</span></h3>
-          </div>
+          </div><!--{iCMS:user:stat userid=$user.uid}-->
           <ul>
-            <!--{iCMS:user:category loop="true" row="30" uid=$user.uid}-->
-            <li><a href="<!--{$user_category.url}-->"><!--{$user_category.name}--></a></li>
-            <!--{/iCMS}-->
+            <li><span class="label label-info">今日访问：<!--{$user_stat.today}--></span></li>
+            <li><span class="label label-info">昨日访问：<!--{$user_stat.yesterday}--></span></li>
+            <li><span class="label label-info">本周访问：<!--{$user_stat.week}--></span></li>
+            <li><span class="label label-info">本月访问：<!--{$user_stat.month}--></span></li>
+            <li><span class="label label-info">所有访问：<!--{$user_stat.all}--></span></li>
           </ul>
         </div>
       </div>
