--- a/trunk/template/default/user/home.htm
+++ b/trunk/template/default/user/home.htm
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="<!--{$site.urls.ui}-->/user-6.0.0.css" type="text/css" />
     <script type="text/javascript">
     $(function(){
-    $('.iCMS_user_card').tooltip({html: 'html'});
+    //$("[data-tip^='uid']").tooltip({html: 'html'});
+    console.log($("[data-tip^='iCMS:ucard']"));
     })
     </script>
   </head>
@@ -24,19 +25,19 @@
         </div>
         <div class="card_top">
           <div class="card_info">
-            <a class="card_title_name iCMS_user_card" data-id="<!--{$user.uid}-->" title="" href="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
+            <a class="card_title_name" data-tip="iCMS:ucard:<!--{$user.uid}-->" href="<!--{$user.urls.home}-->"><!--{$user.nickname}--></a>
             <i class="icon_<!--{$user.sex}-->"></i>
-            <a data-uid="<!--{$user.uid}-->" data-fname="<!--{$user.nickname}-->" data-followed="<!--{$status.followed}-->" class="iCMS_user_follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
+            <a data-param='{"fuid":"<!--{$user.uid}-->","fname":"<!--{$user.nickname}-->"}' class="iCMS_user_follow follow_btn <!--{if $status.followed}-->unfollow<!--{else}-->follow<!--{/if}-->"></a>
             <p class="card_slogan">
-              <!--{$userdata.slogan|default:'这家伙太懒了,什么都没有留下!'}-->
+            <!--{$userdata.slogan|default:'这家伙太懒了,什么都没有留下!'}-->
             </p>
           </div>
           <div class="card_data">
             <ul>
               <li class='last'>
                 <a href="<!--{$user.urls.share}-->">
-                  <span class="text_count">48864</span>
-                  <span class="text_atr">分享</span>
+                <span class="text_count">48864</span>
+                <span class="text_atr">分享</span>
                 </a>
               </li>
               <li>
@@ -83,8 +84,8 @@
                   <a href="<!--{$article_list.url}-->" target="_blank" class="i_th_tit"><!--{$article_list.title}--></a>
                 </div>
                 <div class="info">
-                  <span class="icon_author " data-field="{'userid':<!--{$article_list.userid}-->}">
-                  <a class="sign_highlight iCMS_user_card " href="" target="_blank"><!--{$article_list.author}--></a>
+                  <span class="icon_author">
+                  <a class="sign_highlight" data-tip="iCMS:ucard:<!--{$article_list.userid}-->" href="" target="_blank"><!--{$article_list.author}--></a>
                   </span>
                   <span class="date"><!--{$article_list.pubdate|date:'Y-m-d'}--></span>
                 </div>
@@ -95,10 +96,10 @@
                 <div class="pic"><img src="<!--{$article_list.pic}-->" onload="iCMS.imgFix(this,550,150);"></div>
                 <!--{/if}-->
               </div>
-              <div class="list_fun clearfix">
-                <a href="###" data-iid='<!--{$article_list.id}-->' data-do='good' class="iCMS_article_do" title="32个赞"><i class="icon-thumbs-up"></i> (<span><!--{$article_list.good}--></span>)</a>
-                <a href="###" data-iid='<!--{$article_list.id}-->' data-title='<!--{$article_list.title}-->' data-do='comment' class="iCMS_article_do" title="评论"><i class="icon-comment"></i> (<span><!--{$article_list.comments}--></span>)</a>
-                <a href="###" data-iid='<!--{$article_list.id}-->' data-do='favorite' class="iCMS_article_do" title="收藏"><i class="icon-heart"></i></a>
+              <div class="list_fun clearfix" data-param='{"iid":"<!--{$article_list.id}-->","suid":"<!--{$article_list.userid}-->","title":"<!--{$article_list.title|unicode}-->"}'>
+                <a href="###" data-param='{"do":"good"}' class="iCMS_article_do" title="32个赞"><i class="icon-thumbs-up"></i> (<span><!--{$article_list.good}--></span>)</a>
+                <a href="###" data-param='{"do":"comment"}' class="iCMS_article_do" title="评论"><i class="icon-comment"></i> (<span><!--{$article_list.comments}--></span>)</a>
+                <a href="###" data-param='{"do":"favorite"}' class="iCMS_article_do" title="收藏"><i class="icon-heart"></i></a>
               </div>
             </li>
             <!--{/iCMS}-->
@@ -135,7 +136,7 @@
           </div>
           <ul class="avatarList">
             <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="iCMS_user_card avatar_30" data-uid="<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
+            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
             <!--{/iCMS}-->
           </ul>
         </div>
@@ -146,24 +147,24 @@
           </div>
           <ul>
             <!--{iCMS:user:follow loop="true" row="30" userid=$user.uid}-->
-            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="iCMS_user_card avatar_30" data-uid="<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
+            <li><a href="<!--{$user_follow.url}-->" title="<!--{$user_follow.name}-->"><img class="avatar_30" data-tip="iCMS:ucard:<!--{$user_follow.uid}-->" src="<!--{$user_follow.avatar}-->"></a></li>
             <!--{/iCMS}-->
           </ul>
         </div>
         <div class="mod">
           <div class="hd">
             <h3>统计<span>STATISTICS</span></h3>
-          </div><!--{iCMS:user:stat userid=$user.uid}-->
-          <ul>
-            <li><span class="label label-info">今日访问：<!--{$user_stat.today}--></span></li>
-            <li><span class="label label-info">昨日访问：<!--{$user_stat.yesterday}--></span></li>
-            <li><span class="label label-info">本周访问：<!--{$user_stat.week}--></span></li>
-            <li><span class="label label-info">本月访问：<!--{$user_stat.month}--></span></li>
-            <li><span class="label label-info">所有访问：<!--{$user_stat.all}--></span></li>
-          </ul>
+            </div><!--{iCMS:user:stat userid=$user.uid}-->
+            <ul>
+              <li><span class="label label-info">今日访问：<!--{$user_stat.today}--></span></li>
+              <li><span class="label label-info">昨日访问：<!--{$user_stat.yesterday}--></span></li>
+              <li><span class="label label-info">本周访问：<!--{$user_stat.week}--></span></li>
+              <li><span class="label label-info">本月访问：<!--{$user_stat.month}--></span></li>
+              <li><span class="label label-info">所有访问：<!--{$user_stat.all}--></span></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-    <!--{include file="{iTPL}/footer.htm"}-->
-  </body>
-</html>
+      <!--{include file="{iTPL}/footer.htm"}-->
+    </body>
+  </html>
