--- a/trunk/template/default/header.htm
+++ b/trunk/template/default/header.htm
@@ -3,8 +3,8 @@
     <div class="search pull-right">
       <div class="tools pull-right"> <a href="#"><i class="fa fa-rss"></i> 订阅</a> <a href="#"><i class="fa fa-bookmark fa-1"></i> 收藏</a> </div>
       <div class="nav_login" id="iCMS_nav_login">
-        <a href="<!--{iCMS:router url='/api/login'}-->" class="iCMS_LoginBox" title="登录"><i class="fa fa-user"></i> 登录</a>
-        <a href="<!--{iCMS:router url='/api/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
+        <a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS_LoginBox" title="登录"><i class="fa fa-user"></i> 登录</a>
+        <a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
       </div>
       <div class="nav_profile" id="iCMS_nav_profile">
         <div class="top_nav_profile">
