--- a/trunk/template/default/user/login.htm
+++ b/trunk/template/default/user/login.htm
@@ -49,9 +49,9 @@
               <div class="ot_login">
                 <span>您也可以用以下方式登录：</span>
                 <div class="ot_btn">
-                  <a href="<!--{iCMS:router url='/api/login/qq'}-->" class="login_qq"></a>
-                  <a href="<!--{iCMS:router url='/api/login/wb'}-->" class="login_wb"></a>
-                  <a href="<!--{iCMS:router url='/api/login/wx'}-->" class="login_wx"></a>
+                  <a href="<!--{iCMS:router url='/api/user/login/qq'}-->" class="login_qq"></a>
+                  <a href="<!--{iCMS:router url='/api/user/login/wb'}-->" class="login_wb"></a>
+                  <a href="<!--{iCMS:router url='/api/user/login/wx'}-->" class="login_wx"></a>
                 </div>
               </div>
             </div>
@@ -59,7 +59,7 @@
         </div>
         <div id="lg_right">
           <div class="rst_reg">
-          <h2>注册</h2> <span style="margin-left:40px;">还没有账号？</span> <a style="margin-left:40px;" class="reg" href="<!--{iCMS:router url='/api/register'}-->"></a> </div>
+          <h2>注册</h2> <span style="margin-left:40px;">还没有账号？</span> <a style="margin-left:40px;" class="reg" href="<!--{iCMS:router url='/api/user/register'}-->"></a> </div>
         </div>
         <div class="clear"></div>
       </div>
