--- a/trunk/template/default/user/profile.setpassword.htm
+++ b/trunk/template/default/user/profile.setpassword.htm
@@ -41,35 +41,35 @@ $(function(){
 	$("#resetpassword").submit(function(){
 		var oldPwd= $("[name='oldPwd']");
 		if(oldPwd.val()==""){
-			iCMS.dialog("<!--{'user:password:original'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='user:password:original'}-->",warning);
 			oldPwd.focus();
 			return false;
 		}
 		var password= $("#password").val();
 		if(password==""){
-			iCMS.dialog("<!--{'user:password:empty'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='user:password:empty'}-->",warning);
 			$("#password").focus();
 			return false;
 		}
 		if(password.length<6){
-			iCMS.dialog("<!--{'user:password:error'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='user:password:error'}-->",warning);
 			$("#password").focus();
 			return false;
 		}
 		var newPwd2= $("[name='newPwd2']");
 		if(newPwd2.val()==""){
-			iCMS.dialog("<!--{'user:password:new'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='user:password:new'}-->",warning);
 			newPwd2.focus();
 			return false;
 		}
 		if(password!=newPwd2.val()){
-			iCMS.dialog("<!--{'user:password:unequal'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='user:password:unequal'}-->",warning);
 			$("#password").focus();
 			return false;
 		}
 		var validCode= $("[name='validCode']");
 		if(validCode.val()==""){
-			iCMS.dialog("<!--{'iCMS:seccode:empty'|lang}-->",warning);
+			iCMS.dialog("<!--{iCMS:lang key='iCMS:seccode:empty'}-->",warning);
 			validCode.focus();
 			return false;
 		}
