--- a/trunk/template/iCMS/comment.form.default.htm
+++ b/trunk/template/iCMS/comment.form.default.htm
@@ -20,8 +20,8 @@
 			<div class="iCMS-comment-user clearfix">
 			</div>
 			<div class="iCMS-comment-login clearfix mb10">
-				<a href="<!--{iCMS:router url='/api/login'}-->" class="iCMS_LoginBox" title="登录"><i class="fa fa-user"></i> 登录</a>
-				<a href="<!--{iCMS:router url='/api/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
+				<a href="<!--{iCMS:router url='/api/user/login'}-->" class="iCMS_LoginBox" title="登录"><i class="fa fa-user"></i> 登录</a>
+				<a href="<!--{iCMS:router url='/api/user/register'}-->" target="_blank"><i class="fa fa-heart"></i> 注册</a>
 			</div>
 			<div class="alert">
 				<i class="fa fa-warning "></i> 请自觉遵守互联网相关的政策法规，严禁发布色情、暴力、反动的言论！
