--- a/trunk/template/default/user/register.htm
+++ b/trunk/template/default/user/register.htm
@@ -66,8 +66,8 @@
               </div>
             </div>
             <div id="lg_right">
-              <div class="rst_login"> <span>已经有帐号？请直接登录</span> <a href="<!--{iCMS:router url='/api/login'}-->"></a> </div>
-              <div class="other_login"> <span>您也可以用以下方式登录：</span> <a class="o_icon icon_qq" href="<!--{iCMS:router url='/api/login/qq'}-->">QQ 帐号</a> <a class="o_icon icon_sina" href="<!--{iCMS:router url='/api/login/wb'}-->">新浪微博</a> </div>
+              <div class="rst_login"> <span>已经有帐号？请直接登录</span> <a href="<!--{iCMS:router url='/api/user/login'}-->"></a> </div>
+              <div class="other_login"> <span>您也可以用以下方式登录：</span> <a class="o_icon icon_qq" href="<!--{iCMS:router url='/api/user/login/qq'}-->">QQ 帐号</a> <a class="o_icon icon_sina" href="<!--{iCMS:router url='/api/user/login/wb'}-->">新浪微博</a> </div>
             </div>
           </div>
           <div class="clear"></div>
