--- a/trunk/template/iCMS/public.dialog.htm
+++ b/trunk/template/iCMS/public.dialog.htm
@@ -16,7 +16,7 @@
         <dl>
           <dd>用户名：</dd>
           <dt>
-          <input type="text" name="uname" id="iCMS_uname" value="<!--{"user:login:def_uname"|lang}-->">
+          <input type="text" name="uname" id="iCMS_uname" value="<!--{iCMS:lang key='user:login:def_uname'}-->">
           </dt>
           <dd>密 码：</dd>
           <dt>
@@ -36,17 +36,17 @@
           <dd>&nbsp;</dd>
           <dt>
           <input type="button" class="iCMS_loginBtn btn btn-primary" value="登 陆">
-          <a href="<!--{iCMS:router url='/api/findpwd'}-->">忘记密码？</a></dt>
+          <a href="<!--{iCMS:router url='/api/user/findpwd'}-->">忘记密码？</a></dt>
         </dl>
       </div>
       <div class="reg_or_weibo">
         <div class="register_box">还没有<!--{$site.title}-->账号？
-        <a href="<!--{iCMS:router url='/api/login/qq'}-->" style="display:block; margin:10px 0 20px"><img src="<!--{$site.urls.ui}-->/img/login_for_qq_v3.png"></a></div>
+        <a href="<!--{iCMS:router url='/api/user/login/qq'}-->" style="display:block; margin:10px 0 20px"><img src="<!--{$site.urls.ui}-->/img/login_for_qq_v3.png"></a></div>
         <div class="l_o">
-          <a href="<!--{iCMS:router url='/api/login/wb'}-->">用微博帐号登录</a><br>
-          <a style="background-position: 0 -137px;" href="<!--{iCMS:router url='/api/login/wx'}-->">用微信帐号登录</a>
+          <a href="<!--{iCMS:router url='/api/user/login/wb'}-->">用微博帐号登录</a><br>
+          <a style="background-position: 0 -137px;" href="<!--{iCMS:router url='/api/user/login/wx'}-->">用微信帐号登录</a>
         </div>
-        <a href="<!--{iCMS:router url='/api/register'}-->" style="font-size:14px; text-decoration:underline;">直接注册<!--{$site.title}-->帐号</a>
+        <a href="<!--{iCMS:router url='/api/user/register'}-->" style="font-size:14px; text-decoration:underline;">直接注册<!--{$site.title}-->帐号</a>
       </div>
     </div>
   </div>
