--- a/trunk/template/default/user/home.htm
+++ b/trunk/template/default/user/home.htm
@@ -13,6 +13,10 @@
     $(function(){
     //$("[data-tip^='uid']").tooltip({html: 'html'});
     console.log($("[data-tip^='iCMS:ucard']"));
+    // iCMS.dialog("asdsad");
+    // iCMS.dialog(document.getElementById("report-dialog"));
+
+
     })
     </script>
   </head>
