--- a/trunk/template/iCMS/comment.form.default.htm
+++ b/trunk/template/iCMS/comment.form.default.htm
@@ -30,12 +30,10 @@
 				<textarea class="iCMS-editor-text" name="comment[content]"></textarea>
 			</div>
 			<div class="iCMS-comment-command clearfix">
-				<input type="hidden" id="comment_quote"	name="comment[quote]" value="0">
-				<input type="hidden" id="comment_floor"	name="comment[floor]" value="0">
 				<input type="hidden" id="comment_title"	name="comment[title]" value="<!--{$comment.title}-->">
 				<input type="hidden" id="comment_appid"	name="comment[appid]" value="<!--{$comment.appid}-->">
-				<input type="hidden" id="comment_iid name="comment[iid]" value="<!--{$comment.iid}-->">
-				<input type="hidden" id="comment_cid name="comment[cid]" value="<!--{$comment.cid}-->">
+				<input type="hidden" id="comment_iid" name="comment[iid]" value="<!--{$comment.iid}-->">
+				<input type="hidden" id="comment_cid" name="comment[cid]" value="<!--{$comment.cid}-->">
 				<button class="btn btn-primary" type="submit"><i class="fa fa-check"></i> 提 交</button>
 			</div>
 		</div>
