--- a/trunk/public/ui/iCMS-6.0.0.css
+++ b/trunk/public/ui/iCMS-6.0.0.css
@@ -129,18 +129,12 @@ a:hover>.iCMS-icon-comment-reply { background-position: -250px -79px }
 a:hover>.iCMS-icon-comment-like { background-position: -222px -79px }
 .iCMS-icon-no-help { background-position: -71px -183px; }
 a:hover>.iCMS-icon-no-help { background-position: -71px -170px }
-.iCMS-icon-spike {
-position: absolute;
-top: -8px;
-left: 23px;
-width: 13px;
-height: 8px;
-background-position: -200px -165px;
-}
+.iCMS-icon-spike { position: absolute; top: -8px; left: 23px; width: 13px; height: 8px; background-position: -200px -165px; }
 /* bootstrap */
 a, a:hover, a:focus { color: #057AFD; }
 .btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 /* dialog */
+.d-content { color: #222; }
 .iPHP-msg { text-align: center; margin: 5px; padding: 4px; }
 .iPHP-msg .label { padding: 8px 10px; font-size: 14px; letter-spacing: 1px; line-height: 160%; }
 .iPHP-msg pre { width: 800px; text-align: left; }
@@ -148,15 +142,16 @@ a, a:hover, a:focus { color: #057AFD; }
 /* modal
 -------------------------------------------------- */
 .modal { margin: 0px !important; }
-.modal .modal-header { padding: 3px 15px; }
-.modal .modal-header h3 { font-weight: bold; font-size: 18px; }
+.modal .modal-header { background-color: #1575d5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1d7fe2), to(#0865c2)); background-image: -webkit-linear-gradient(top, #1d7fe2, #0865c2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 3px 15px; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, .1) inset, 0 1px 1px rgba(0, 0, 0, .2); margin: -1px -1px 0; line-height: 14px; }
+.modal .modal-header h3 { color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700; }
 .modal .modal-footer { padding: 10px 15px; }
-.modal .modal-body { overflow: hidden; padding: 0px; max-height: 100%; height: 100%; }
+.modal .modal-body { overflow: hidden; margin: 17px 0; padding: 0 15px; max-height: 100%; height: 100%; }
 .modal .modal-loading { margin: 10px; }
 .modal-iframe { top: 0px; left: 0px; width: 100%; height: 100%; }
 .modal-iframeFix { top: 0px; left: 0px; width: 100%; height: 100%; background: #fff; position: absolute; opacity: 0.001; zIndex: 1000; display: none; }
 #modal-overlay { position: fixed; top: 0px; left: 0px; z-index: 100; width: 100%; height: 100%; }
 .modal-overlayBG { background-color: #000; opacity: 0.3; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)"; filter: alpha(opacity=30); -moz-opacity: 0.3; }
+.modal .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff; }
 /* ============================================================================================= */
 /* iCMS_pagination */
 .iCMS_pagination { margin: 10px; clear: both; height: 30px; }
@@ -215,23 +210,23 @@ url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 -------------------------------------------------- */
 #iCMS_seccode { width: 60px; }
 #iCMS_seccode_img { vertical-align: top; }
-#iCMS_Login_Box { display: none; }
 #iCMS_uname { font-size: 12px; }
-.iCMS_Login_Box .login_box { padding: 0 12px 24px; background-color: #fff; }
-.iCMS_Login_Box .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px; }
-.iCMS_Login_Box .login_form dd { float: left; width: 55px; vertical-align: middle; text-align: right; line-height: 26px; }
-.iCMS_Login_Box .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px; }
-.iCMS_Login_Box .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top; }
-.iCMS_Login_Box .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px; }
-.iCMS_Login_Box .register_box { line-height: 16px; }
-.iCMS_Login_Box .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer; }
-.iCMS_Login_Box .lb_bd { width: 560px; }
-.iCMS_Login_Box .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px; }
-.iCMS_Login_Box .login_fail { visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617; }
-.iCMS_Login_Box .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8; }
-.iCMS_Login_Box .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px; }
-.iCMS_Login_Box .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px; }
-.iCMS_Login_Box .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px; }
+#iCMS_login_box { display: none; }
+.iCMS_login_box .login_box { padding: 0 12px 24px; background-color: #fff; }
+.iCMS_login_box .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px; }
+.iCMS_login_box .login_form dd { float: left; width: 58px; vertical-align: middle; text-align: right; line-height: 26px; }
+.iCMS_login_box .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px; }
+.iCMS_login_box .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top; }
+.iCMS_login_box .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px; }
+.iCMS_login_box .register_box { line-height: 16px; }
+.iCMS_login_box .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer; }
+.iCMS_login_box .lb_bd { width: 560px; }
+.iCMS_login_box .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px; }
+.iCMS_login_box .login_fail { visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617; }
+.iCMS_login_box .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8; }
+.iCMS_login_box .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px; }
+.iCMS_login_box .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px; }
+.iCMS_login_box .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px; }
 /* iCMS/comment
 -------------------------------------------------- */
 .iCMS_API_iframe { width: 100%; }
@@ -241,6 +236,27 @@ url('iconfont/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */ }
 .iCMS-editor-text { padding: 5px 10px; width: 580px; height: 90px; background: url(img/iCMS.logo.bg-6.0.png) no-repeat center center; font-size: 14px; line-height: 1.7; }
 .iCMS-comment-command { }
 .iCMS-comment-command .btn { float: right; margin: 8px 0px 8px 8px; padding: 5px 10px; }
+/*--------*/
+#iCMS_comment_report { display: none; }
+.report_dialog {}
+.report_dialog.loading .modal-dialog-buttons { display: none }
+.report_dialog .options { margin-top: 8px }
+.report_dialog .options li { padding: 4px 6px; list-style: none; line-height: 2 }
+.report_dialog .options li li { padding: 0 6px; display: inline-block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box; width: 50% }
+.report_dialog .options label { cursor: pointer;margin: 2px 0px;}
+.report_dialog .options input[type=radio] { margin: 0px 5px 2px 0px;}
+.report_dialog .options .description, .report_dialog .options .group-description { padding-left: 1em; line-height: 1.7; color: #999 }
+.report_dialog .options .group-options { margin-left: 10px }
+.report_dialog .options .visible-if-checked { display: none }
+.report_dialog .options li.checked { background-color: #eff6fa; border-radius: 3px }
+.report_dialog .options li.checked .visible-if-checked { display: block }
+.report_dialog .reason-text { width: 100%;height: 30px; margin: 10px 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; -ms-box-sizing: border-box; box-sizing: border-box }
+.report_dialog .error-container { color: #fa8282; text-align: right }
+.report_dialog .input-container { position: relative }
+.report_dialog .headnote { float: right; color: #999 }
+.report_dialog .footnote { color: #999 }
+.report_dialog .loading { text-align: center; color: #999 }
+
 /* iCMS/user.agreement.htm
 -------------------------------------------------- */
 .agreement { padding-right: 40px; padding-left: 40px; width: 880px; _width: 880px; }
