--- a/trunk/template/default/user/home.htm
+++ b/trunk/template/default/user/home.htm
@@ -136,7 +136,7 @@
         <div class="mod">
           <div class="hd">
             <h3>粉丝<span>FANS</span></h3>
-            <a href="<!--{iCMS:router url='/user/manage/follower'}-->" target="_blank" class="more">管理&gt;&gt;</a>
+            <a href="<!--{iCMS:router url='/user/manage/fans'}-->" target="_blank" class="more">管理&gt;&gt;</a>
           </div>
           <ul class="avatarList">
             <!--{iCMS:user:follow loop="true" row="30" fuid=$user.uid}-->
