--- a/trunk/template/default/user/profile.htm
+++ b/trunk/template/default/user/profile.htm
@@ -30,15 +30,15 @@
               <div id="profile_form">
                 <!--{switch from=$pg}-->
                   <!--{case value="base"}-->
-                    <!--{include file="./profile.base.htm" import="true"}-->
+                    <!--{include file="./profile/base.htm" import="true"}-->
                   <!--{case value="avatar"}-->
-                    <!--{include file="./profile.avatar.htm" import="true"}-->
+                    <!--{include file="./profile/avatar.htm" import="true"}-->
                   <!--{case value="setpassword"}-->
-                    <!--{include file="./profile.setpassword.htm" import="true"}-->
+                    <!--{include file="./profile/setpassword.htm" import="true"}-->
                   <!--{case value="bind"}-->
-                    <!--{include file="./profile.bind.htm" import="true"}-->
+                    <!--{include file="./profile/bind.htm" import="true"}-->
                   <!--{case value="custom"}-->
-                    <!--{include file="./profile.custom.htm" import="true"}-->
+                    <!--{include file="./profile/custom.htm" import="true"}-->
                 <!--{/switch}-->
               </div>
             </div>
