--- a/trunk/template/default/user/register.htm
+++ b/trunk/template/default/user/register.htm
@@ -48,7 +48,7 @@
                 <!--{/if}-->
                 <div class="ipt_box">
                   <input class="box fl" name="agreement" type="checkbox" checked="checked">
-                  <span class="fl">我已看过并同意《<a href="<!--{iCMS:router url='/user/agreement'}-->" target="_blank"><!--{$site.title}-->网络服务使用协议</a>》</span> </div>
+                  <span class="fl">我已看过并同意《<a href="<!--{iCMS:router url='/api/user/agreement'}-->" target="_blank"><!--{$site.title}-->网络服务使用协议</a>》</span> </div>
                   <div class="ipt_sub">
                     <input type="button" class="sub iCMS_registerBtn" value=" ">
                   </div>
