--- a/trunk/template/default/article.htm
+++ b/trunk/template/default/article.htm
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="comments_list" id="iCMS_comments_list">
-          <!--{iCMS:comment:list display="frame" appid="1" iid=$article.id}-->
+          <!--{iCMS:comment:list display="iframe" appid="1" iid=$article.id}-->
         </div>
         <div class="comment_form">
           <!--{iCMS:comment:form ref="true"}-->
